--- a/uid/rwd-school-of-rock/creative/fall/week-2.html
+++ b/uid/rwd-school-of-rock/creative/fall/week-2.html
@@ -16,8 +16,8 @@ section: creative-fall-2013-week-2
 		<p>Designers don't also need to be developers, but it never hurts to have a baseline understanding of how a PSD becomes HTML. While PSDs are strutured with layers, HTML is structured with the DOM.</p>
 
 		<ul class="dom-images" role="presentation">
-			<li><a href="http://www.imdb.com/title/tt0068646/">The Don<img src="../../img/don.jpg" alt="Don Vito Corleone"></a></li>
-			<li><a href="http://en.wikipedia.org/wiki/Document_Object_Model">The DOM<img src="../../img/dom.jpg" alt="DOM diagram"></a></li>
+			<li><a href="http://www.imdb.com/title/tt0068646/">The Don<img src="../../../img/don.jpg" alt="Don Vito Corleone"></a></li>
+			<li><a href="http://en.wikipedia.org/wiki/Document_Object_Model">The DOM<img src="../../../img/dom.jpg" alt="DOM diagram"></a></li>
 		</ul>
 
 		<h3>Document Object Model</h3>
@@ -70,7 +70,7 @@ section: creative-fall-2013-week-2
 			<li>Use mobile as the base, add different styles on as layout requires - site will inherit base styles unless they are overridden by another style in a media query</li>
 			<li>"Breakpoints" come naturally - adjust the layout when the content starts "breaking" the layout</li>
 			<li>Example: four bottom modules on <a href="http://nissan-jobs.tmpqa.com/">nissan-jobs.tmpqa.com</a>
-		
+
 				<ul>
 					<li>Smallest screens - modules stack on top of one another (1 x 4)
 
@@ -130,7 +130,7 @@ width: 100%;
 		<p>Two possible patterns:</p>
 
 		<ol>
-			<li><a href="../../examples/offscreen/index.html">Off-screen</a> or <a href="http://nissan-jobs.tmpqa.com">slide-out</a> menu
+			<li><a href="../../../examples/offscreen/index.html">Off-screen</a> or <a href="http://nissan-jobs.tmpqa.com">slide-out</a> menu
 
 				<ul>
 					<li>Accessed on tap of menu button on smaller screens, pushing main content off the screen or sitting on top of main content when open</li>
@@ -157,7 +157,7 @@ width: 100%;
 
 		<p>These diagrams, lovingly <a href="http://www.lukew.com/ff/entry.asp?1649">stolen from Luke Wroblewski</a>, illustrate the easiest and most difficult screen spaces for touch screen users to reach.</p>
 
-		<a href="../../img/touchpoints-enlarge.jpg" target="_blank"><img class="touchpoints" src="/img/touchpoints.jpg" alt="ergonomics of use for touch screen devices"></a>
+		<a href="../../../img/touchpoints-enlarge.jpg"><img class="touchpoints" src="../../../img/touchpoints.jpg" alt="ergonomics of use for touch screen devices"></a>
 
 		<span class="small-caption">(click the image to open in a new window)</span>
 
@@ -183,7 +183,7 @@ width: 100%;
 
 		<div class="video-container">
 
-			<iframe src="https://www.youtube.com/embed/bLEo1H72i2Q?rel=0&showinfo=0" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/bLEo1H72i2Q?rel=0&showinfo=0" title="RWD School of Rock: Fall 2013 - Session 2 - Accessibility Example (4)" allowfullscreen></iframe>
 
 		</div>
 
@@ -231,7 +231,7 @@ width: 100%;
 
 		<h3>On your mark... get set... respond!</h3>
 
-		<p>We will re-convene as a group (designers and developers both) during the second week of October to review designs and reflect on your experiences during the exercise. We will also discuss how we can better incorporate responsive thinking and collaboration into our regular workflow.</p> 
+		<p>We will re-convene as a group (designers and developers both) during the second week of October to review designs and reflect on your experiences during the exercise. We will also discuss how we can better incorporate responsive thinking and collaboration into our regular workflow.</p>
 
 		<a href="https://docs.google.com/spreadsheet/ccc?key=0Am162c4LqyYRdDF2dkVzQ05OMXJSLXFycGJEMjYwbHc&usp=sharing" class="button button-big">Get your assignment</a>
 
@@ -249,7 +249,7 @@ width: 100%;
 
 		<div class="video-container">
 
-			<iframe src="https://www.youtube.com/embed/kOLOgYiWEzg?rel=0&showinfo=0" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/kOLOgYiWEzg?rel=0&showinfo=0" title="RWD School of Rock: Fall 2013 - Session 2a (5)" allowfullscreen></iframe>
 
 		</div>
 
@@ -257,7 +257,7 @@ width: 100%;
 
 		<div class="video-container">
 
-			<iframe src="https://www.youtube.com/embed/59VTTPuOwtA?rel=0&showinfo=0" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/59VTTPuOwtA?rel=0&showinfo=0" title="RWD School of Rock: Fall 2013 - Session 2b (6)" allowfullscreen></iframe>
 
 		</div>
 
@@ -265,7 +265,7 @@ width: 100%;
 
 </section>
 
-<nav id="menu">
+<nav id="menu" aria-label="Page">
 
 	<ul class="nav">
 		<li><a href="#dom">The DOM</a></li>
@@ -276,4 +276,3 @@ width: 100%;
 	</ul>
 
 </nav>
-
