--- a/uid/rwd-school-of-rock/creative/fall/week-3.html
+++ b/uid/rwd-school-of-rock/creative/fall/week-3.html
@@ -17,7 +17,7 @@ section: creative-fall-2013-week-3
 
 		<h3>Problem: Tiny footer links</h3>
 
-		<a id="pointer" href="#pointer"><img src="../../img/issues-footerlinks.jpg" alt="tiny footer links" class="issue-mobile"></a>
+		<a id="pointer" href="#pointer"><img src="../../../img/issues-footerlinks.jpg" alt="tiny footer links" class="issue-mobile"></a>
 
 		<h3>Potenial solutions:</h3>
 
@@ -33,15 +33,15 @@ section: creative-fall-2013-week-3
 
 		<div class="side-by-side">
 
-			<a href="../../img/full-designs/merrymaids-issue-small.jpg"><img src="../../img/issues-content-1.jpg" alt="Element order on small screen" class="smallscreen"></a>
+			<a href="../../../img/full-designs/merrymaids-issue-small.jpg"><img src="../../../img/issues-content-1.jpg" alt="Element order on small screen" class="smallscreen"></a>
 
-			<a href="../../img/full-designs/merrymaids-issue-large.jpg"><img src="../../img/issues-content-2.jpg" alt="Element order on large screen" class="largescreen"></a>
+			<a href="../../../img/full-designs/merrymaids-issue-large.jpg"><img src="../../../img/issues-content-2.jpg" alt="Element order on large screen" class="largescreen"></a>
 
 		</div>
 
 		<h3>Potential solution: Reorder content</h3>
 
-		<img class="issue-mobile" src="../../img/issues-content-3.jpg" alt="Mobile elements reordered">
+		<img class="issue-mobile" src="../../../img/issues-content-3.jpg" alt="Mobile elements reordered">
 
 		<ul>
 			<li>Consistent cross-device content hierarchy</li>
@@ -57,11 +57,11 @@ section: creative-fall-2013-week-3
 
 		<p>Before text resize:</p>
 
-		<img class="issue-desktop" src="../../img/issues-grid-1.jpg" alt="tight grid layout before text resize">
+		<img class="issue-desktop" src="../../../img/issues-grid-1.jpg" alt="tight grid layout before text resize">
 
 		<p>After text resize:</p>
 
-		<img class="issue-desktop" src="../../img/issues-grid-2.jpg" alt="tight grid layout after text resize">
+		<img class="issue-desktop" src="../../../img/issues-grid-2.jpg" alt="tight grid layout after text resize">
 
 		<h3>Potential solutions:</h3>
 
@@ -69,7 +69,7 @@ section: creative-fall-2013-week-3
 			<li>Having unevenly-sized content modules is absolutely acceptable in your design - the mockup should not set the expectation of a perfectly aligned grid</li>
 			<li>Allow content modules to have variable heights (see job descriptions on <a href="http://jobsattmp.com/">jobsattmp.com</a>)
 
-				<img class="issue-desktop" src="../../img/issues-grid-3.jpg" alt="modules with variable heights">
+				<img class="issue-desktop" src="../../../img/issues-grid-3.jpg" alt="modules with variable heights">
 
 			</li>
 			<li>Avoid precisely-sized container layouts for text content</li>
@@ -85,13 +85,13 @@ section: creative-fall-2013-week-3
 
 			<div>
 
-				<img src="../../img/issues-burger-1.jpg" alt="smallscreen view with hamburger nav button">
+				<img src="../../../img/issues-burger-1.jpg" alt="smallscreen view with hamburger nav button">
 
 			</div>
 
 			<div>
 
-				<img src="../../img/issues-burger-2.jpg" alt="large screen view with no menu">
+				<img src="../../../img/issues-burger-2.jpg" alt="large screen view with no menu">
 
 			</div>
 
@@ -111,13 +111,13 @@ section: creative-fall-2013-week-3
 
 			<div>
 
-				<img src="../../img/issue-content-1.jpg" alt="smallscreen view with second search and different copy">
+				<img src="../../../img/issue-content-1.jpg" alt="smallscreen view with second search and different copy">
 
 			</div>
 
 			<div>
 
-				<img src="../../img/issue-content-2.jpg" alt="large screen view with different headline">
+				<img src="../../../img/issue-content-2.jpg" alt="large screen view with different headline">
 
 			</div>
 
@@ -143,7 +143,7 @@ section: creative-fall-2013-week-3
 
 		<h3>Design:</h3>
 
-		<a href="../../img/full-designs/sketch-full.jpg"><img class="issue-desktop" src="../../img/sketch.jpg" alt="Merrymaids sketch mockups"></a>
+		<a href="../../../img/full-designs/sketch-full.jpg"><img class="issue-desktop" src="../../../img/sketch.jpg" alt="Merrymaids sketch mockups"></a>
 
 		<h3>Highlights:</h3>
 
@@ -158,9 +158,9 @@ section: creative-fall-2013-week-3
 
 		<div class="side-by-side">
 
-			<a href="../../img/full-designs/ericsson-smallscreen.jpg"><img src="../../img/ericsson-1.jpg" alt="Ericsson small screen view" class="smallscreen"></a>
+			<a href="../../../img/full-designs/ericsson-smallscreen.jpg"><img src="../../../img/ericsson-1.jpg" alt="Ericsson small screen view" class="smallscreen"></a>
 
-			<a href="../../img/full-designs/ericsson-largescreen.jpg"><img src="../../img/ericsson-2.jpg" alt="Ericsson large screen view" class="largescreen"></a>
+			<a href="../../../img/full-designs/ericsson-largescreen.jpg"><img src="../../../img/ericsson-2.jpg" alt="Ericsson large screen view" class="largescreen"></a>
 
 		</div>
 
@@ -178,9 +178,9 @@ section: creative-fall-2013-week-3
 
 		<div class="side-by-side">
 
-			<a href="../../img/full-designs/hp-smallscreen.jpg"><div class="hp-smallscreen"></div></a>
+			<a href="../../../img/full-designs/hp-smallscreen.jpg"><div class="hp-smallscreen"></div></a>
 
-			<a href="../../img/full-designs/hp-largescreen.jpg"><img src="../../img/hp-menu-3.jpg" alt="HP large screen view" class="largescreen"></a>
+			<a href="../../../img/full-designs/hp-largescreen.jpg"><img src="../../../img/hp-menu-3.jpg" alt="HP large screen view" class="largescreen"></a>
 
 		</div>
 
@@ -199,9 +199,9 @@ section: creative-fall-2013-week-3
 
 		<div class="side-by-side">
 
-			<a href="../../img/full-designs/multicare-smallscreen.jpg"><div class="multi-smallscreen"></div></a>
+			<a href="../../../img/full-designs/multicare-smallscreen.jpg"><div class="multi-smallscreen"></div></a>
 
-			<a href="../../img/full-designs/multicare-largescreen.jpg"><img src="../../img/multicare-2.jpg" alt="Multicare large screen view" class="largescreen"></a>
+			<a href="../../../img/full-designs/multicare-largescreen.jpg"><img src="../../../img/multicare-2.jpg" alt="Multicare large screen view" class="largescreen"></a>
 
 		</div>
 
@@ -258,20 +258,19 @@ section: creative-fall-2013-week-3
 
 		<h3>Keeping up</h3>
 
-		<p>Responsive design and development are fluid concepts themselves. New devices, layout patterns, and development technologies are constantly forcing RWD to evolve and expand its design potential. Check out the <a href="../../extra-credit.html">Extra Credit page</a> for some resources to help you stay up to date with all things responsive.</p>
+		<p>Responsive design and development are fluid concepts themselves. New devices, layout patterns, and development technologies are constantly forcing RWD to evolve and expand its design potential. Check out the <a href="../../../extra-credit/">Extra Credit page</a> for some resources to help you stay up to date with all things responsive.</p>
 
 	</div>
 
 </section>
 
-<nav id="menu">
-		
+<nav id="menu" aria-label="Page">
+
 	<ul class="nav">
 		<li><a href="#note">Take Note</a></li>
 		<li><a href="#star">Star Students</a></li>
 		<li><a href="#feedback">Respond to Responsive</a></li>
 		<li><a href="#now-what">Now what?</a></li>
 	</ul>
-	
-</nav>
 
+</nav>
