--- a/uid/rwd-school-of-rock/creative/spring/index.html
+++ b/uid/rwd-school-of-rock/creative/spring/index.html
@@ -7,7 +7,7 @@ section: creative-spring-2014
 <h2 class="subtitle">Spring Semester</h2>
 
 <ul class="portal-selector">
-	<li><a href="week-1.html" class="button button-big">Week 1</a></li>
-	<li><a href="week-2.html" class="button button-big">Week 2</a></li>
-	<li><a href="week-3.html" class="button button-big">Week 3</a></li>
+	<li><a href="week-1" class="button button-big">Week 1</a></li>
+	<li><a href="week-2" class="button button-big">Week 2</a></li>
+	<li><a href="week-3" class="button button-big">Week 3</a></li>
 </ul>
