--- a/uid/rwd-school-of-rock/creative/spring/week-3.html
+++ b/uid/rwd-school-of-rock/creative/spring/week-3.html
@@ -21,13 +21,13 @@ section: creative-fall-2013-week-3
 
 			<div>
 
-				<img class="smallscreen" src="../../img/aia/content-parity-small.jpg" alt="Content modules on small screen">
+				<img class="smallscreen" src="../../../img/aia/content-parity-small.jpg" alt="Content modules on small screen">
 
 			</div>
 
 			<div>
 
-				<img class="largescreen" src="../../img/aia/content-parity-large.jpg" alt="Content modules on large screen">
+				<img class="largescreen" src="../../../img/aia/content-parity-large.jpg" alt="Content modules on large screen">
 
 			</div>
 
@@ -52,13 +52,13 @@ section: creative-fall-2013-week-3
 
 			<div>
 
-				<img class="smallscreen" src="../../img/aia/gridlock-small.jpg" alt="Tight grid layout on small screen">
+				<img class="smallscreen" src="../../../img/aia/gridlock-small.jpg" alt="Tight grid layout on small screen">
 
 			</div>
 
 			<div>
 
-				<img class="largescreen" src="../../img/aia/gridlock-large.jpg" alt="Tight grid layout on large screen">
+				<img class="largescreen" src="../../../img/aia/gridlock-large.jpg" alt="Tight grid layout on large screen">
 
 			</div>
 
@@ -79,7 +79,7 @@ section: creative-fall-2013-week-3
 			<li>Keep modules, but make it clear in the mockups (especially those going to clients) that modules may not always align perfectly</li>
 		</ul>
 
-		<img class="issue-desktop" src="../../img/aia/gridlock-unlocked.jpg" alt="Modules of uneven heights on large screen">
+		<img class="issue-desktop" src="../../../img/aia/gridlock-unlocked.jpg" alt="Modules of uneven heights on large screen">
 
 		<hr/>
 
@@ -89,13 +89,13 @@ section: creative-fall-2013-week-3
 
 			<div>
 
-				<img class="smallscreen" src="../../img/aia/carousel-small.jpg" alt="Carousel on small screen">
+				<img class="smallscreen" src="../../../img/aia/carousel-small.jpg" alt="Carousel on small screen">
 
 			</div>
 
 			<div>
 
-				<img class="largescreen" src="../../img/aia/carousel-large.jpg" alt="Carousel on large screen">
+				<img class="largescreen" src="../../../img/aia/carousel-large.jpg" alt="Carousel on large screen">
 
 			</div>
 
@@ -133,13 +133,13 @@ section: creative-fall-2013-week-3
 
 					<div>
 
-						<img class="smallscreen" src="../../img/aia/mothercare-alternate-small.jpg" alt="Mothercare small screen wire">
+						<img class="smallscreen" src="../../../img/aia/mothercare-alternate-small.jpg" alt="Mothercare small screen wire">
 
 					</div>
 
 					<div>
 
-						<img class="largescreen" src="../../img/aia/mothercare-alternate-large.jpg" alt="Mothercare large screen wire">
+						<img class="largescreen" src="../../../img/aia/mothercare-alternate-large.jpg" alt="Mothercare large screen wire">
 
 					</div>
 
@@ -160,9 +160,9 @@ section: creative-fall-2013-week-3
 
 		<div class="side-by-side">
 
-			<a href="../../img/aia/full/thales-wire-small.jpg" id="thales-hand"><div><img class="smallscreen" src="../../img/aia/thales-wire-small.jpg" alt="Thales small screen wires"></div></a>
+			<a href="../../../img/aia/full/thales-wire-small.jpg" id="thales-hand"><div><img class="smallscreen" src="../../../img/aia/thales-wire-small.jpg" alt="Thales small screen wires"></div></a>
 
-			<a href="../../img/aia/full/thales-wire-large.jpg"><img class="largescreen" src="../../img/aia/thales-wire-large.jpg" alt="Thales large screen wires"></a>
+			<a href="../../../img/aia/full/thales-wire-large.jpg"><img class="largescreen" src="../../../img/aia/thales-wire-large.jpg" alt="Thales large screen wires"></a>
 
 		</div>
 
@@ -178,9 +178,9 @@ section: creative-fall-2013-week-3
 
 		<div class="side-by-side">
 
-			<a href="../../img/aia/full/thales-small.jpg"><img class="smallscreen" src="../../img/aia/thales-small.jpg" alt="Thales small screen mock"></a>
+			<a href="../../../img/aia/full/thales-small.jpg"><img class="smallscreen" src="../../../img/aia/thales-small.jpg" alt="Thales small screen mock"></a>
 
-			<a href="../../img/aia/full/thales-large.jpg"><img class="largescreen" src="../../img/aia/thales-large.jpg" alt="Thales large screen mock"></a>
+			<a href="../../../img/aia/full/thales-large.jpg"><img class="largescreen" src="../../../img/aia/thales-large.jpg" alt="Thales large screen mock"></a>
 
 		</div>
 
@@ -196,9 +196,9 @@ section: creative-fall-2013-week-3
 
 		<div class="side-by-side taller-smallscreen">
 
-			<a href="../../img/aia/full/thales-single-small.jpg"><img class="smallscreen" src="../../img/aia/thales-single-small.jpg" alt="Thales single column small screen mock"></a>
+			<a href="../../../img/aia/full/thales-single-small.jpg"><img class="smallscreen" src="../../../img/aia/thales-single-small.jpg" alt="Thales single column small screen mock"></a>
 
-			<a href="../../img/aia/full/thales-single-large.jpg"><img class="largescreen" src="../../img/aia/thales-single-large.jpg" alt="Thales single column large screen mock"></a>
+			<a href="../../../img/aia/full/thales-single-large.jpg"><img class="largescreen" src="../../../img/aia/thales-single-large.jpg" alt="Thales single column large screen mock"></a>
 
 		</div>
 
@@ -254,14 +254,14 @@ section: creative-fall-2013-week-3
 
 		<h3>Keeping up</h3>
 
-		<p>Responsive design and development are fluid concepts themselves. New devices, layout patterns, and development technologies are constantly forcing RWD to evolve and expand its design potential. Check out the <a href="../../extra-credit.html">Extra Credit page</a> for some resources to help you stay up to date with all things responsive.</p>
+		<p>Responsive design and development are fluid concepts themselves. New devices, layout patterns, and development technologies are constantly forcing RWD to evolve and expand its design potential. Check out the <a href="../../../extra-credit/">Extra Credit page</a> for some resources to help you stay up to date with all things responsive.</p>
 
 	</div>
 
 </section>
 
-<nav id="menu">
-		
+<nav id="menu" aria-label="Page">
+
 	<ul class="nav">
 		<li><a href="#note">Take Note</a></li>
 		<li><a href="#highlight">Highlights</a></li>
