--- a/uid/rwd-school-of-rock/index.html
+++ b/uid/rwd-school-of-rock/index.html
@@ -4,11 +4,11 @@ title: Welcome
 ---
 
 <ul class="portal-selector">
-	<li><a href="creative/" class="button button-big">Creative</a></li>
-	<li><a href="qa/" class="button button-big">Quality Assurance</a></li>
+	<li><a href="creative" class="button button-big">Creative</a></li>
+	<li><a href="qa" class="button button-big">Quality Assurance</a></li>
 </ul>
 
 <ul class="portal-selector">
-	<li><a href="rwd-by-the-numbers.html" class="button button-big">RWD-By-Numbers</a></li>
-	<li><a href="extra-credit.html" class="button button-big">Extra Credit</a></li>
+	<li><a href="rwd-by-the-numbers" class="button button-big">RWD-By-Numbers</a></li>
+	<li><a href="extra-credit" class="button button-big">Extra Credit</a></li>
 </ul>
