--- a/uid/rwd-school-of-rock/qa/index.html
+++ b/uid/rwd-school-of-rock/qa/index.html
@@ -69,13 +69,13 @@ section: qa
 
     <figure>
 
-      <img src="../img/fig-1.jpg" alt="">
+      <img src="../img/fig-1.jpg" alt="Red and blue costumed Spider-man, watching Black costumed Spider-man writing 'Web Design' on white board.">
 
       <figcaption>Collaboration is key to successful web experience. Death to silos!</figcaption>
 
     </figure>
 
-    <p>In the past year, the <abbr title="User Interface Development">UID</abbr> team has made great progress in helping our creative colleagues see past the desktop. The UID team now reviews designs very closely before they are sent to the client for approval, and small screen comps are now a requirement on all responsive projects. Training through the <a href="/creative/index">RWD School of Rock</a> sessions have also been instrumental in getting our project managers and designers, here and abroad, up to speed on what it means to design in a multi-device world.<p>
+    <p>In the past year, the User Interface Development (UID) team has made great progress in helping our creative colleagues see past the desktop. The UID team now reviews designs very closely before they are sent to the client for approval, and small screen comps are now a requirement on all responsive projects. Training through the <a href="../creative/">RWD School of Rock</a> sessions have also been instrumental in getting our project managers and designers, here and abroad, up to speed on what it means to design in a multi-device world.<p>
 
   </div>
 
@@ -91,7 +91,7 @@ section: qa
 
     <figure>
 
-      <a href="../img/fig-2.jpg" target="_blank"><img src="../img/fig-2.jpg" alt=""></a>
+      <img src="../img/fig-2.jpg" alt="A chart of the responsive design workflow.">
 
       <figcaption>A custom web site workflow.</figcaption>
 
@@ -119,7 +119,7 @@ section: qa
 
     <figure>
 
-      <img src="../img/fig-3.jpg" alt="">
+      <img src="../img/fig-3.jpg" alt="Dozens of mobile phones, tablets, and laptops out on display.">
 
       <figcaption>The new reality. Welcome.</figcaption>
 
@@ -133,7 +133,7 @@ section: qa
 
     <figure>
 
-      <a href="../img/fig-4.jpg" target="_blank"><img src="../img/fig-4.jpg" alt=""></a>
+      <img src="../img/fig-4.jpg" alt="JobsAtTMP.com with a missing stylesheet.">
 
       <figcaption>While this may not look gorgeous, getting our markup right is essential to success. CSS? We don't need no stinkin' CSS (or JavaScript)!</figcaption>
 
@@ -143,7 +143,7 @@ section: qa
 
     <figure>
 
-      <a href="../img/fig-5.jpg" target="_blank"><img src="../img/fig-5.jpg" alt=""></a>
+      <img src="../img/fig-5.jpg" alt="JobsAtTMP.com with a 'Mobile First' layout.">
 
       <figcaption><a href="http://jobsattmp.com">jobsattmp.com</a> as seen on Internet Explorer 8...</figcaption>
 
@@ -153,7 +153,7 @@ section: qa
 
     <figure>
 
-      <img src="../img/doc-brown.jpg" alt="">
+      <img src="../img/doc-brown.jpg" alt="Back to the Future's Doc Brown, with mouth agape.">
 
       <figcaption><q>Great Scott! A mobile web site on Internet Explorer 8?!?</q> Yes, Doc Brown, this is progressive enhancement at it's finest!</figcaption>
 
@@ -165,7 +165,7 @@ section: qa
 
     <figure>
 
-      <a href="../img/fig-6.jpg" target="_blank"><img src="../img/fig-6.jpg" alt=""></a>
+      <img src="../img/fig-6.jpg" alt="JobsAtTMP.com fully styled.">
 
      <figcaption>All of the bells and whistles our clients love. <a href="http://jobsattmp.com">jobsattmp.com</a> as seen on a modern desktop browser.</figcaption>
 
@@ -175,7 +175,7 @@ section: qa
 
     <figure>
 
-      <img src="../img/fig-7.jpg" alt="">
+      <img src="../img/fig-7.jpg" alt="JobsAtTMP.com as seen on various mobile browsers.">
 
       <figcaption><a href="http://jobsattmp.com">jobsattmp.com</a> as seen on iOS Safari, Opera Mini, and Chrome.</figcaption>
 
@@ -185,9 +185,9 @@ section: qa
 
     <figure>
 
-      <img src="../img/fig-8.jpg" alt="">
+      <img src="../img/fig-8.jpg" alt="JobsAtTMP.com as seen on a 2002 HP iPAQ.">
 
-      <figcaption><a href="http://jobsattmp.com">jobsattmp.com</a> as seen on a <strong>2002</strong> HP iPAQ Pocket PC! Insane! Here we have come full circle. This is <em>why</em> we embrace progressive enhancement&mdash;so that anyone, anywhere, on any device, can access our site content.</figcaption>
+      <figcaption><a href="http://jobsattmp.com">jobsattmp.com</a> as seen on a <strong>2002</strong> HP iPAQ Pocket PC! Cool! Here we have come full circle. This is <em>why</em> we embrace progressive enhancement&mdash;so that anyone, anywhere, on any device, can access our site content.</figcaption>
 
     </figure>
 
@@ -242,7 +242,7 @@ section: qa
 
       <figure>
 
-        <a href="../img/fig-11.jpg" target="_blank"><img src="../img/fig-11.jpg" alt=""></a>
+        <img src="../img/fig-11.jpg" alt="Screenshot of Chrome DevTools.">
 
         <figcaption>DevTools: A friend to UI Developers AND QA Technicians.</figcaption>
 
@@ -253,7 +253,7 @@ section: qa
 
       <figure>
 
-        <a href="../img/fig-12.jpg" target="_blank"><img src="../img/fig-12.jpg" alt=""></a>
+        <img src="../img/fig-12.jpg" alt="Screenshot of performance measurement as seen in Chrome DevTools">
 
         <figcaption>No, friends don't let friends create 8 megabyte web pages.</figcaption>
 
@@ -311,21 +311,25 @@ section: qa
 
     <div class="video-container">
 
-      <iframe src="//www.youtube.com/embed/z7sTRdSpA04" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/z7sTRdSpA04" title="Emulation in Chrome DevTools" allowfullscreen></iframe>
 
     </div>
 
     <p><strong>Important!</strong> <em>Emulation should not be used</em> if TMP has a perfectly functioning device on hand to test on. Only use when there are no other options available or time is extraordinarily short. Emulation testing is better than no physical device testing at all!</p>
 
-  </section>
+  </div>
 
-  <section id="responsive-talentbrew">
+</section>
+
+<section id="responsive-talentbrew">
+
+  <div>
 
     <h2>Responsive TalentBrew</h2>
 
     <figure>
 
-      <img src="../img/fig-9.jpg" alt="">
+      <img src="../img/fig-9.jpg" alt="Missles launching and exploding in center of world map.">
 
       <figcaption>Defcon 1! March 1st, 2014 saw the launch of "Responsive" TalentBrew.</figcaption>
 
@@ -385,7 +389,7 @@ section: qa
 
     <figure>
 
-      <a href="../img/fig-10.jpg" target="_blank"><img src="../img/fig-10.jpg" alt=""></a>
+      <img src="../img/fig-10.jpg" alt="A 3-D rendering of the JobsAtTMP.com website.">
 
       <figcaption>Doing more with less on TalentBrew.</figcaption>
 
@@ -401,7 +405,7 @@ section: qa
     </tr>
     <tbody>
     <tr>
-      <th><abbr title="Hypertext Transfer Protocol">HTTP</abbr> Requests</th>
+      <th>HTTP Requests</th>
       <td>53</td>
       <td>42</td>
       <td>-<b class="awesome">11</b></td>
@@ -433,9 +437,9 @@ section: qa
 
     <figure>
 
-      <img src="../img/spell-and-plumbot.jpg" alt="">
+      <img src="../img/spell-and-plumbot.jpg" alt="George Reeves, dressed in Superman costume, shaking hands with a robot.">
 
-      <figcaption>Plumbot says, <q>01101001101.</q> Translation: <q>I love web standards.</q></figcaption>
+      <figcaption>Plumbot says, <q>01001001 00100000 01101100 01101111 01110110 01100101 00100000 01110111 01100101 01100010 00100000 01110011 01110100 01100001 01101110 01100100 01100001 01110010 01100100 01110011 .</q> Translation: <q>I love web standards.</q></figcaption>
 
     </figure>
 
@@ -457,7 +461,7 @@ section: qa
 
     <div class="video-container">
 
-      <iframe src="https://www.youtube.com/embed/Ycu_usJ-jcU?rel=0&showinfo=0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/Ycu_usJ-jcU?rel=0&showinfo=0" title="RWD School of Rock: Awesome QA Edition!" allowfullscreen></iframe>
 
     </div>
 
@@ -465,7 +469,7 @@ section: qa
 
 </section>
 
-<nav id="menu">
+<nav id="menu" aria-label="Page">
 
   <ul class="nav">
     <li><a href="#overview">Overview</a></li>
