--- a/uid/rwd-school-of-rock/creative/spring/week-2.html
+++ b/uid/rwd-school-of-rock/creative/spring/week-2.html
@@ -15,9 +15,9 @@ section: creative-spring-2014-week-2
 
 		<p>Designers don't also need to be developers, but it never hurts to have a baseline understanding of how a PSD becomes HTML. While PSDs are strutured with layers, HTML is structured with the DOM.</p>
 
-		<ul class="dom-images" role="presentation">
-			<li><a href="http://www.imdb.com/title/tt0068646/">The Don<img src="../../img/don.jpg" alt="Don Vito Corleone"></a></li>
-			<li><a href="http://en.wikipedia.org/wiki/Document_Object_Model">The DOM<img src="../../img/dom.jpg" alt="DOM diagram"></a></li>
+		<ul class="dom-images">
+			<li><a href="http://www.imdb.com/title/tt0068646/">The Don<img src="../../../img/don.jpg" alt="Don Vito Corleone"></a></li>
+			<li><a href="http://en.wikipedia.org/wiki/Document_Object_Model">The DOM<img src="../../../img/dom.jpg" alt="DOM diagram"></a></li>
 		</ul>
 
 		<h3>Document Object Model</h3>
@@ -89,7 +89,7 @@ section: creative-spring-2014-week-2
 		<p>Two possible patterns:</p>
 
 		<ol>
-			<li><a href="../../examples/offscreen/index.html">Off-screen</a> or <a href="http://nissan-jobs.tmpqa.com">slide-out</a> menu
+			<li><a href="../../../examples/offscreen/index.html">Off-screen</a> or <a href="http://nissan-jobs.tmpqa.com">slide-out</a> menu
 
 				<ul>
 					<li>Accessed on tap of menu button on smaller screens, pushing main content off the screen or sitting on top of main content when open</li>
@@ -117,7 +117,7 @@ section: creative-spring-2014-week-2
 
 		<p>These diagrams, lovingly <a href="http://www.lukew.com/ff/entry.asp?1649">stolen from Luke Wroblewski</a>, illustrate the easiest and most difficult screen spaces for touch screen users to reach.</p>
 
-		<a href="../../img/touchpoints-enlarge.jpg" target="_blank"><img class="touchpoints" src="../../img/touchpoints.jpg" alt="ergonomics of use for touch screen devices"></a>
+		<a href="../../../img/touchpoints-enlarge.jpg"><img class="touchpoints" src="../../../img/touchpoints.jpg" alt="ergonomics of use for touch screen devices"></a>
 
 		<span class="small-caption">(click the image to open in a new window)</span>
 
@@ -210,7 +210,7 @@ section: creative-spring-2014-week-2
 
 		<div class="video-container">
 
-			<iframe src="https://www.youtube.com/embed/bLEo1H72i2Q?rel=0&showinfo=0" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/bLEo1H72i2Q?rel=0&showinfo=0" title="RWD School of Rock: Fall 2013 - Session 2 - Accessibility Example (4)" allowfullscreen></iframe>
 
 		</div>
 
@@ -276,7 +276,7 @@ section: creative-spring-2014-week-2
 
 		<div class="video-container">
 
-			<iframe allowfullscreen="" src="https://www.youtube.com/embed/DAXiiQGLbrw?rel=0&amp;showinfo=0"></iframe>
+			<iframe src="https://www.youtube.com/embed/DAXiiQGLbrw?rel=0&amp;showinfo=0" title="RWD School of Rock: Spring 2014 - Session 2 (7)" allowfullscreen></iframe>
 
 		</div>
 
@@ -286,7 +286,7 @@ section: creative-spring-2014-week-2
 
 <nav id="menu">
 
-	<ul class="nav">
+	<ul class="nav" aria-label="Page">
 		<li><a href="#dom">The DOM</a></li>
 		<li><a href="#media"><b>@</b>media</a></li>
 		<li><a href="#navigation">Getting Around</a></li>
