--- a/support/index.html
+++ b/support/index.html
@@ -6,7 +6,7 @@ layout: null
 
 <h2 id="web-standards">Web Standards</h2>
 
-<p>Our design and development methodologies adhere to standards and guidelines proposed by the <a href="https://www.w3c.org/">W3C (World Wide Web Consortium)</a> and best practices found within the design and development community. By using the most modern and inclusive techniques available, {{ site.company-name }} can craft an experience that is both engaging and accessible to all users.</p>
+<p>Our design and development methodologies adhere to standards and guidelines proposed by the <a href="https://www.w3c.org/" data-custom-event="true" data-custom-category="custom event" data-custom-label="W3C">W3C (World Wide Web Consortium)</a> and best practices found within the design and development community. By using the most modern and inclusive techniques available, {{ site.company-name }} can craft an experience that is both engaging and accessible to all users.</p>
 
 <p>To learn more about our <a href="{{ site.company-url }}">design and development standards</a>, please visit us on GitHub.</p>
 
@@ -21,7 +21,7 @@ layout: null
 <ul>
   <li>Windows 10</li>
   <li>Windows 8/8.1</li>
-  <li>macOS 10.14 (Mojave)</li>
+  <li>macOS 10.15 (Catalina)</li>
   <li>iOS 13.x</li>
   <li>iOS 12.x</li>
   <li>Android 10.x</li>
@@ -31,18 +31,18 @@ layout: null
 
 <h2 id="browser-support">Browser Support</h2>
 
-<p>{{ site.company-name }} supports the <strong>current</strong> and <strong>prior major</strong> release versions of all major browsers. Corresponding to the date in which your project has launched, we test all work in the following:</p>
+<p>{{ site.company-name }} supports the <strong>current</strong> and <strong>prior major</strong> release versions of all major browsers. Corresponding to the date on which your project has launched, we test all work in the following:</p>
 
 <ul>
-  <li><a href="https://www.chromestatus.com/features/schedule/">Google Chrome</a></li>
-  <li><a href="https://www.mozilla.org/en-US/firefox/releases/">Mozilla Firefox</a></li>
-  <li><a href="https://developer.apple.com/documentation/safari_release_notes/">Apple Safari</a></li>
-  <li><a href="https://docs.microsoft.com/en-us/deployedge/microsoft-edge-relnote-stable-channel/">Microsoft Edge</a></li>
+  <li><a href="https://www.chromestatus.com/features" data-custom-event="true" data-custom-category="custom event" data-custom-label="Google Chrome">Google Chrome</a></li>
+  <li><a href="https://www.mozilla.org/en-US/firefox/releases/" data-custom-event="true" data-custom-category="custom event" data-custom-label="Mozilla Firefox">Mozilla Firefox</a></li>
+  <li><a href="https://developer.apple.com/documentation/safari_release_notes/" data-custom-event="true" data-custom-category="custom event" data-custom-label="Apple Safari">Apple Safari</a></li>
+  <li><a href="https://docs.microsoft.com/en-us/deployedge/microsoft-edge-relnote-stable-channel/" data-custom-event="true" data-custom-category="custom event" data-custom-label="Microsoft Edge">Microsoft Edge</a></li>
 </ul>
 
 <h2 id="email-support">Email Support</h2>
 
-<p>Corresponding to the date in which your project has launched and due to the vast technical differences in email client software, we test all text and HTML based emails in the following primary email client:</p>
+<p>Corresponding to the date on which your project has launched and due to the vast technical differences in email client software, we test all text and HTML based emails in the following primary email client:</p>
 
 <ul>
   <li>Gmail Desktop (Latest browser versions only, except for Internet Explorer 11)</li>
@@ -56,11 +56,11 @@ layout: null
   <li>Gmail Android (Upon Request Only) [Not all designs can be built responsively]</li>
 </ul>
 
-<p>Our development team analyzes global <a href="https://gs.statcounter.com/">browser market share</a> and client web traffic data on a quarterly basis. Web browser support ends when that browser represents less than 5% of all market share and/or web traffic.</p>
+<p>Our development team analyzes global <a href="https://gs.statcounter.com/" data-custom-event="true" data-custom-category="custom event" data-custom-label="browser market share">browser market share</a> and client web traffic data on a quarterly basis. Web browser support ends when that browser represents less than 5% of all market share and/or web traffic.</p>
 
 <p>We do not, as a matter of course, support browsers that are not listed within this document. Should your users or company's browser needs differ, please consult your account representative immediately.</p>
 
-<p><em>Please note that we do not support browsers that have been modified, run in compatibility mode, or filter out code via proxy filtering, that is required for the normal operation of your site.</em></p>
+<p><em>Please note that we do not support browsers that have been modified, run in compatibility mode, or filter out code via proxy filtering that is required for the normal operation of your site.</em></p>
 
 <h2 id="limited-support">Limited Browser Support</h2>
 
