--- a/support/index.html
+++ b/support/index.html
@@ -8,7 +8,7 @@ layout: null
 
 <p>Our design and development methodologies adhere to standards and guidelines proposed by the <a href="https://www.w3c.org/" data-custom-event="true" data-custom-category="custom event" data-custom-label="W3C">W3C (World Wide Web Consortium)</a> and best practices found within the design and development community. By using the most modern and inclusive techniques available, {{ site.company-name }} can craft an experience that is both engaging and accessible to all users.</p>
 
-<p>To learn more about our <a href="{{ site.company-url }}">design and development standards</a>, please visit us on GitHub.</p>
+<p>To learn more about our <a href="{{ site.repo-url }}">design and development standards</a>, please visit us on GitHub.</p>
 
 <h2 id="accessibility">Accessibility</h2>
 
